--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -14,7 +14,9 @@ layout: default
 
 <div class="container" id="main">
     <div class="row container" id="mainrow">
-        {{ content }}
+        <div class="col-sm-12 col-md-11 col-lg-10 col-xxl-9 align-middle mx-auto d-block">
+            {{ content }}
+        </div>
     </div>
 
 </div>
