--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -90,3 +90,68 @@ details {
 a {
     text-decoration: none;
 }
+
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+
+  a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+  a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .icon {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+
+  .topnav {
+    a:not(:first-child) {display: none;}
+    a.icon {
+      float: right;
+      display: block;
+    }
+  }
+
+
+  .topnav.responsive {
+    position: relative;
+
+    a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    
+    .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+  }
+
+  ul, ol {
+    margin-left: 0px;
+  }
+  details {
+    margin-left: 20px;
+  }
+    
+}
