--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,15 +2,16 @@
 layout: default
 ---
 
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/python/">Python</a></li>
-        <li><a href="/r/">R</a></li>
-        <li><a href="/shell/">Unix Shell</a></li>
-        <li><a href="/git/">Git</a></li>
-    </ul>
-</nav>
+<div class="topnav" id="myTopnav">
+    <a href="/" class="active">Home</a>
+    <a href="/python/">Python</a>
+    <a href="/r/">R</a>
+    <a href="/shell/">Unix Shell</a>
+    <a href="/git/">Git</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
+</div>
 
 <div class="container" id="main">
     <div class="row container" id="mainrow">
@@ -20,4 +21,5 @@ layout: default
     </div>
 
 </div>
+
 
