--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,45 +22,7 @@ body {
   font-weight: bold;
 }
 
-nav {
-  .active {
-    background-color: rgb(56, 78, 179);
 
-  }
-  
-  ul {
-    list-style-type: none;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-    background-color: #333;
-    
-  }
-    
-  
-  li {
-    font-size: 16pt;
-    display: inline;
-    float: left;
-  }
-
-  li a {
-    display: block;
-    text-decoration: none;
-    text-align: center;
-    color: white;
-    padding: 14px 16px;
-    
-  }
-  li a:hover {
-    text-decoration: none;
-    background-color: #111;
-    color: white;
-  }
-  
-  
-}
 ul, ol {
     margin-left: 20px;
 }
@@ -120,24 +82,75 @@ a {
   }
 }
 
+.subnav {
+  float: left;
+  overflow: flex;
+
+  .subnavbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+}
+
+.subnav-content {
+  display: none;
+  position: absolute;
+  left: 0;
+  background-color: #04AA6D;
+  width: 100%;
+  z-index: 1;
+
+  a {
+    float: left;
+    color: white;
+    text-decoration: none;
+  }
+
+  a:hover {
+    background-color: #eee;
+    color: black;
+  }
+}
+
+.subnav:hover {
+  // .subnav-content {
+    // display: block; 
+  // }
+
+  .subnavbtn {
+    background-color: #04AA6D;
+  }
+}
+
 @media screen and (max-width: 700px) {
 
   .topnav {
     a:not(:first-child) {display: none;}
+    .subnav:not(:first-child) {display: none;}
     a.icon {
       float: right;
       display: block;
     }
   }
 
-
   .topnav.responsive {
     position: relative;
+    overflow: visible;
 
-    a {
+    a, .subnav, .subnavbtn {
       float: none;
       display: block;
       text-align: left;
+    }
+
+    .subnavbtn {
+      width: 100%;
     }
     
     .icon {
