--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -7,7 +7,7 @@ layout: default
     <a href="/python/">Python</a>
     <a href="/r/">R</a>
     <div class="subnav" >
-        <button onclick="subNav('shellSub')" class="subnavbtn">Unix Shell <i class="fa fa-caret-down"></i></button>
+        <button onclick="subNav('shellSub', this)" class="subnavbtn">Unix Shell <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content" id="shellSub">
             <a href="/shell">the shell</a>
             <a href="/shell/shell-start/">get started</a>
