modified layouts, added _includes, moved git sessions, added git subnav, edited subnav

--- a/_layouts/git.html
+++ b/_layouts/git.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body onload="subNav('shellSub', document.getElementById('shellbutton'));">
+  <body onload="subNav('gitSub', document.getElementById('gitbutton'));">
   
     {% include banner.html %}
 
@@ -25,5 +25,6 @@
 
   </body>
 </html>
+
 
 
