init git session 4

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,6 +22,7 @@
             <a href="/git/git-1">lesson 1</a>
             <a href="/git/git-2">lesson 2</a>
             <a href="/git/git-3">lesson 3</a>
+            <a href="/git/git-4">lesson 4</a>
         </div>
     </div> 
     <a href="javascript:void(0);" class="icon" onclick="reactiveNav()" id="hamburger">
