split up git session1 into setup install and quick start, glossary init

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,10 +19,13 @@
         <button onclick="subNav('gitSub', this)" class="subnavbtn" id="gitbutton">Git <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content" id="gitSub">
             <a href="/git">git</a>
+            <a href="/git/setup-install/">setup & install</a>
+            <a href="/git/quick-start/">quick start</a>
             <a href="/git/git-1">lesson 1</a>
             <a href="/git/git-2">lesson 2</a>
             <a href="/git/git-3">lesson 3</a>
             <a href="/git/git-4">lesson 4</a>
+            <a href="/git/glossary/">glossary</a>
         </div>
     </div> 
     <a href="javascript:void(0);" class="icon" onclick="reactiveNav()" id="hamburger">
