migrate git session 2 to pushing and fetch-merge

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,8 @@
             <a href="/git">git</a>
             <a href="/git/setup-install/">setup & install</a>
             <a href="/git/quick-start/">quick start</a>
+            <a href="/git/pushing/">pushing</a>
+            <a href="/git/fetch-merge/">fetch & merge</a>
             <a href="/git/git-2">lesson 2</a>
             <a href="/git/git-3">lesson 3</a>
             <a href="/git/git-4">lesson 4</a>
