changed git 4 to branching

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
             <a href="/git/pushing/">pushing</a>
             <a href="/git/fetch-merge/">fetch & merge</a>
             <a href="/git/git-3">lesson 3</a>
-            <a href="/git/git-4">lesson 4</a>
+            <a href="/git/branching/">branching</a>
             <a href="/git/glossary/">glossary</a>
         </div>
     </div> 
