--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,7 +23,7 @@
             <a href="/git/quick-start/">quick start</a>
             <a href="/git/pushing/">pushing</a>
             <a href="/git/fetch-merge/">fetch & merge</a>
-            <a href="/git/git-3">lesson 3</a>
+            <a href="/git/git-utilities">git utilities</a>
             <a href="/git/branching/">branching</a>
             <a href="/git/glossary/">glossary</a>
         </div>
