--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,17 @@
 <div class="topnav" id="myTopnav">
     <a href="/" class="active">Home</a>
-    <a href="/python/">Python</a>
+    <div class="subnav" >
+        <button onclick="subNav('pySub', this)" class="subnavbtn" id="pybutton">
+            Python&nbsp;<i class="fa fa-caret-down"></i>
+        </button>
+        <div class="subnav-content" id="pySub">
+            <a href="/python">python</a>
+            <a href="/python/setup-install/">setup & install</a>
+        </div>
+    </div>
     <a href="/r/">R</a>
     <div class="subnav" >
-        <button onclick="subNav('shellSub', this)" class="subnavbtn" id="shellbutton">Unix Shell <i class="fa fa-caret-down"></i></button>
+        <button onclick="subNav('shellSub', this)" class="subnavbtn" id="shellbutton">Unix Shell&nbsp;<i class="fa fa-caret-down"></i></button>
         <div class="subnav-content" id="shellSub">
             <a href="/shell">the shell</a>
             <a href="/shell/shell-start/">get started</a>
@@ -16,7 +24,7 @@
         </div>
     </div> 
     <div class="subnav" >
-        <button onclick="subNav('gitSub', this)" class="subnavbtn" id="gitbutton">Git <i class="fa fa-caret-down"></i></button>
+        <button onclick="subNav('gitSub', this)" class="subnavbtn" id="gitbutton">Git&nbsp;<i class="fa fa-caret-down"></i></button>
         <div class="subnav-content" id="gitSub">
             <a href="/git">git</a>
             <a href="/git/setup-install/">setup & install</a>
