moved main dive to html snippet

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -4,13 +4,7 @@ layout: default
 
 {% include nav.html %}
 
-<div class="container" id="main">
-    <div class="row container" id="mainrow">
-        <div class="col-sm-12 col-md-11 col-lg-10 col-xxl-9 align-middle mx-auto d-block">
-            {{ content }}
-        </div>
-    </div>
+{% include main.html %}
 
-</div>
 
 
