--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -9,16 +9,9 @@
 
     <main id="content" class="main-content" role="main">
         
-        {% include nav.html %}
-        
-        <div class="container" id="main">
-            <div class="row container" id="mainrow">
-                <div class="col-sm-12 col-md-11 col-lg-10 col-xxl-9 align-middle mx-auto d-block">
-                    {{ content }}
-                </div>
-            </div>
-        
-        </div>
+      {% include nav.html %}
+      
+      {% include main.html %}
 
       {% include footer.html %}
     </main>
