--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,7 @@
         <div class="subnav-content" id="pySub">
             <a href="/python">python</a>
             <a href="/python/setup-install/">setup & install</a>
+            <a href="/python/jupyter/">jupyter</a>
         </div>
     </div>
     <a href="/r/">R</a>
