--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,6 +8,7 @@
             <a href="/python">python</a>
             <a href="/python/setup-install/">setup & install</a>
             <a href="/python/jupyter/">jupyter</a>
+            <a href="/python/python-fundamentals/">fundamentals</a>
         </div>
     </div>
     <a href="/r/">R</a>
