added JS function for python and output code blocks

--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -3,7 +3,8 @@
 
   {% include head.html %}
 
-  <body onload="subNav('pySub', document.getElementById('pybutton'));">
+  <!-- <body onload="subNav('pySub', document.getElementById('pybutton'));"> -->
+    <body onload="subNav('pySub', document.getElementById('pybutton')); pythonBlocks();">
   
     {% include banner.html %}
 
