switch statement for highlight label, added markdown label

--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <!-- <body onload="subNav('pySub', document.getElementById('pybutton'));"> -->
-    <body onload="subNav('pySub', document.getElementById('pybutton')); pythonBlocks();">
+    <body onload="subNav('pySub', document.getElementById('pybutton')); labelBlocks();">
   
     {% include banner.html %}
 
