python data structures init

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,7 @@
             <a href="/python/setup-install/">setup & install</a>
             <a href="/python/jupyter/">jupyter</a>
             <a href="/python/python-fundamentals/">fundamentals</a>
+            <a href="python/data-structures/">lists & dicts</a>
         </div>
     </div>
     <a href="/r/">R</a>
