changed colors to match brandeis colors

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,8 @@
 <div class="topnav" id="myTopnav">
-    <a href="/" class="active">Home</a>
+    <!-- <a class="logo" href="/">
+        <span class="icons-logo"></span>
+    </a> -->
+    <a href="/">Home</a>
     <div class="subnav" >
         <button onclick="subNav('pySub', this)" class="subnavbtn" id="pybutton">
             Python&nbsp;<i class="fa fa-caret-down"></i>
