--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,13 +20,13 @@
         <button onclick="subNav('shellSub', this)" class="subnavbtn" id="shellbutton">Unix Shell&nbsp;<i class="fa fa-caret-down"></i></button>
         <div class="subnav-content" id="shellSub">
             <a href="/shell">the shell</a>
-            <a href="/shell/shell-start/">get started</a>
-            <a href="/shell/shell-1">lesson 1</a>
-            <a href="/shell/shell-2">lesson 2</a>
-            <a href="/shell/shell-3">lesson 3</a>
-            <a href="/shell/shell-4">lesson 4</a>
-            <a href="/shell/shell-5">lesson 5</a>
-            <a href="/shell/shell-6">lesson 6</a>
+            <a href="/shell/setup/">setup</a>
+            <a href="/shell/navigating">navigating</a>
+            <a href="/shell/alter-dir">altering directories</a>
+            <a href="/shell/pipes-filters">pipes & filters</a>
+            <a href="/shell/loops">loops</a>
+            <a href="/shell/shell-scripts">shell scripts</a>
+            <a href="/shell/search-find">search & find</a>
         </div>
     </div> 
     <div class="subnav" >
