numpy and pandas pages

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,6 +13,8 @@
             <a href="/python/jupyter/">jupyter</a>
             <a href="/python/python-fundamentals/">fundamentals</a>
             <a href="/python/data-structures/">lists & dicts</a>
+            <a href="/python/numpy/">numpy</a>
+            <a href="/python/pandas/">pandas</a>
         </div>
     </div>
     <a href="/r/">R</a>
