pandas images sizes, minor edits

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -225,6 +225,14 @@ a {
 
 }
 
+div.table {
+  padding-bottom: 20px;
+  table {
+    font-size: 14pt;
+  }
+}
+
+
 .language-python.highlighter-rouge {
   a.nav-link.active {
     color: #b5bd68;
