init python conditionals and loops

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,6 +15,8 @@
             <a href="/python/data-structures/">lists & dicts</a>
             <a href="/python/numpy/">numpy</a>
             <a href="/python/pandas/">pandas</a>
+            <a href="/python/conditionals/">conditionals</a>
+            <a href="/python/loops/">loops</a>  
         </div>
     </div>
     <a href="/r/">R</a>
