python figures init

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,6 +17,7 @@
             <a href="/python/pandas/">pandas</a>
             <a href="/python/conditionals/">conditionals</a>
             <a href="/python/loops/">loops</a>  
+            <a href="/python/figures/">figures</a>
         </div>
     </div>
     <a href="/r/">R</a>
