--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body onload="subNav('shellSub', document.getElementById('shellbutton'));">
+  <body onload="subNav('shellSub', document.getElementById('shellbutton')); labelBlocks();">
   
     {% include banner.html %}
 
