ol margins and minor edits

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,6 +53,13 @@ footer.site-footer {
 
 ul, ol {
   margin-left: 20px;
+
+}
+
+ol {
+  li {
+    margin: 10px;
+  }
 }
 details {
   margin: 20px 0 20px 0;
