--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,8 @@ body, .project-tagline {
   color:#fff;
   text-align:center;
   background-color:#233a74;
-  background-image:linear-gradient(120deg, #233a74 , #4D858D)}
+  background-image:linear-gradient(120deg, #233a74 , #4D858D)
+}
 
 footer.site-footer {
   text-align: center;
