--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -90,6 +90,7 @@ a {
   background-color: #333;
   overflow: hidden;
   font-weight: 400;
+  transition: all 0.3s ease-out;
 
   a {
     float: left;
@@ -99,6 +100,7 @@ a {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    transition: all 0.2s ease-out;
   }
 
   a.active {
@@ -149,6 +151,7 @@ a {
     background-color: inherit;
     font-family: inherit;
     margin: 0;
+    transition: all 0.2s ease-out;
   }
 
   // .subnav {
@@ -159,17 +162,20 @@ a {
 }
 
 .subnav-content {
-  display: none;
+  display: block;
   position: absolute;
   left: 0;
   background-color: #4D858D;
   width: 100%;
   z-index: 1;
+  // transition: visibility 0s, opacity 0.5s linear;
+  transition: all 0.2s ease-out;
 
   a {
     float: left;
     color: white;
     text-decoration: none;
+    // transition: all 0.3s ease-out;
   }
 
   a:hover {
