--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -162,7 +162,7 @@ a {
 }
 
 .subnav-content {
-  display: block;
+  display: none;
   position: absolute;
   left: 0;
   background-color: #4D858D;
