add R quick start

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,13 @@
             <a href="/python/figures/">figures</a>
         </div>
     </div>
-    <a href="/r/">R</a>
+    <div class="subnav" >
+        <button onclick="subNav('rSub', this)" class="subnavbtn" id="rbutton">R&nbsp;<i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content" id="rSub">
+            <a href="/r/">r</a>
+            <a href="/r/quick-start/">quick-start</a>
+        </div>
+    </div> 
     <div class="subnav" >
         <button onclick="subNav('shellSub', this)" class="subnavbtn" id="shellbutton">Unix Shell&nbsp;<i class="fa fa-caret-down"></i></button>
         <div class="subnav-content" id="shellSub">
