--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -272,6 +272,11 @@ div.table {
   }
 
 }
+
+.language-r.highlighter-rouge .highlight .nf {
+  color: white;
+  font-weight: normal;
+}
  
 // .highlight .c { color: #969896 } /* Comment */
 .highlight .err { color: #cc6666 } /* Error */
