init python functions, limited highlight height

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,7 @@
             <a href="/python/numpy/">numpy</a>
             <a href="/python/pandas/">pandas</a>
             <a href="/python/figures/">figures</a>
+            <a href="/python/functions/">functions</a>
         </div>
     </div>
     <div class="subnav" >
