init r data wrangling, adjust colors on R code

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,8 @@
         <button onclick="subNav('rSub', this)" class="subnavbtn" id="rbutton">R&nbsp;<i class="fa fa-caret-down"></i></button>
         <div class="subnav-content" id="rSub">
             <a href="/r/">r</a>
-            <a href="/r/quick-start/">quick-start</a>
+            <a href="/r/quick-start/">quick start</a>
+            <a href="/r/data-wrangling/">data wrangling</a>
         </div>
     </div> 
     <div class="subnav" >
