init r data viz

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,6 +27,7 @@
             <a href="/r/">r</a>
             <a href="/r/quick-start/">quick start</a>
             <a href="/r/data-wrangling/">data wrangling</a>
+            <a href="/r/data-visualization/">data visualization</a>
         </div>
     </div> 
     <div class="subnav" >
