init python stats

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,6 +19,7 @@
             <a href="/python/pandas/">pandas</a>
             <a href="/python/figures/">figures</a>
             <a href="/python/functions/">functions</a>
+            <a href="/python/stats">stats</a>
         </div>
     </div>
     <div class="subnav" >
