--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,6 +29,7 @@
             <a href="/r/quick-start/">quick start</a>
             <a href="/r/data-wrangling/">data wrangling</a>
             <a href="/r/data-visualization/">data visualization</a>
+            <a href="/r/text-mining/">text mining</a>
         </div>
     </div> 
     <div class="subnav" >
