--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -54,6 +54,7 @@
             <a href="/git/pushing/">pushing</a>
             <a href="/git/fetch-merge/">fetch & merge</a>
             <a href="/git/git-utilities">git utilities</a>
+            <a href="/git/forking/">forking</a>
             <!-- <a href="/git/branching/">branching</a> -->
             <a href="/git/glossary/">glossary</a>
         </div>
