added in code block labels to git

--- a/_layouts/git.html
+++ b/_layouts/git.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body onload="subNav('gitSub', document.getElementById('gitbutton'));">
+  <body onload="subNav('gitSub', document.getElementById('gitbutton')); labelBlocks();">
   
     {% include banner.html %}
 
